Fixed vertical spacing safari bug Fixed safari logo display bug; rotateX transform causes the logos to be invisible. Smoothed Logo animation by removing vertical padding alterations Removed race condition on mainbuilding position in reCalcOnWindowResize() function Default hidden to header text and button content to prevent the jump; sorry to thouse without js.
 On branch dev

 Changes to be committed:
	modified:   sass/screen.scss
	modified:   static/assets/JS/js.js
	modified:   static/assets/stylesheets/screen.css
	modified:   static/index.html

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -71,7 +71,10 @@ body, html {
 
 //Veritical space, for general use
 .verticalSpace{
-    margin-top: 5%;
+    // margin-top: 5%;
+    height: 5vw;
+    width: 100%;
+    display: block;
 
 }
 
@@ -211,6 +214,7 @@ body, html {
     //header
     #contentWrapper{
         position: absolute;
+        display: none;
 
         /* center the element */
         right: 0;
@@ -266,10 +270,10 @@ body, html {
         left: 0;
         margin-right: auto;
         margin-left: auto;
+        display: none;
         
         color: white;
 
-        display: block;
         font-size: 1em;
 
         h1{
@@ -687,28 +691,53 @@ body, html {
 
 }
 
+
+//Rotate seems to cause element to literaly disaper off the face of the earth in safari...
 .goldSponsorLogo{
-    transform: rotateX(5deg)  rotateY(15deg) rotateZ(0deg);
-    transition: transform 0.8s ease, margin-bottom 1s ease;
+    // transform: rotateY(15deg) rotateZ(0deg);
+    @include transition(transform 0.6s linear, margin-bottom 1s linear);
+    // margin-bottom: 50%;
 
 }
 
 .silverSponsorLogo{
-    transform: rotateX(5deg)  rotateY(15deg) rotateZ(0deg);
-    transition: transform 0.7s ease, margin-bottom 1s ease;
-
+    // transform: rotateY(15deg) rotateZ(0deg);
+    @include transition(transform 0.5s linear, margin-bottom 1s linear); 
+    // margin-bottom: 50%;
 }
 
 .bronzeSponsorLogo{
-    transform: rotateX(5deg)  rotateY(15deg) rotateZ(0deg);
-    transition: transform 0.6s ease, margin-bottom 1s ease;
+    // transform: rotateY(15deg) rotateZ(0deg);
+    @include transition(transform 0.4s linear, margin-bottom 1s linear);
 
+}
+
+
+#goldSponsorRow{
+    margin-bottom: 5%;
+}
+
+#silverSponsorRow{
+    margin-bottom: 5%;
+}
+
+#bronzeSponsorRow{
+    margin-bottom: 5%;
 }
 
 .sponsorTitle{
     margin: 0 auto;
 }
 
+.GoldText{
+    color: gold;
+}
+.SilverText{
+    color: silver;
+}
+.BronzeText{
+    color: #cd7f32;
+}
 
 ////////////*/
 //              Footer Styles
@@ -732,7 +761,7 @@ footer{
         max-width: 45%;
 
         @include respond-to('mobile') {
-            max-width: 50%;
+            max-width: 45%;
 
         }
 
